# daily-blog

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  enrich_topics.py  extract_claims.py  feeds.txt  generate_editorial.py  ingest_rss.py  lift_topics.py  normalize_topics.py  orchestrator_utils.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  run_pipeline.py  score_rss.py
.github/workflows/: ci.yml
.sisyphus/: boulder.json  ralph-loop.local.md
.sisyphus/plans/: backend-modular-refactor.md  intelligence-execution.md  intelligence-layer.md
config/: model-routing.json  prompts.json  rules-engine.json
daily_blog/: __init__.py
daily_blog/config/: __init__.py  runtime.py
daily_blog/core/: __init__.py  env.py  env_parsing.py  json_utils.py  progress.py  time_utils.py  tracing.py
daily_blog/editorial/: evidence.py  model_io.py  prompt.py  store.py  synthesis.py  templates.py
daily_blog/enrichment/: discussion.py  fetch.py  helpers.py  model_io.py  store.py
daily_blog/insights/: settings_utils.py
daily_blog/model_inference/: __init__.py  backpressure.py  caller.py  config.py  dispatch.py  errors.py  schema.py
daily_blog/pipeline/: definitions.py  metrics_store.py  snapshot_service.py  stage_runner.py  subprocess_runner.py
docs/: README.md
docs/developer/: 01-architecture.md  02-api-reference.md  03-database-schema.md  04-configuration-reference.md  05-testing-guide.md  06-extending-the-pipeline.md  README.md
docs/internal/: discussion.md  (+9 more)
ops/: logrotate.conf  runbook.md
scripts/: cleanup_data.py  docs_viewer.py  insights_viewer.py  migrate_v2.sql  soak_test.py
tests/: create_fixture_db.py  fixture.db  fixtures.py  model-routing-fast-fail.json  run_suites.py  test_config_runtime.py  test_discussion_harvest.py  test_e2e_deterministic.py  test_editorial_templates.py  test_enrich_topics.py  test_enrichment_fetch.py  test_extract_claims.py  test_generate_editorial.py  test_ingest.py  test_lift_topics.py  test_normalize_topics.py  test_orchestrator_utils.py  test_pipeline_stages.py  test_scoring_baseline.py
(+26 files in other folders)
